add POST /users/me/subscriptions
