# wazo_webhookd/plugins/subscription/api.yml
@@ -84,6 +84,26 @@ paths:
           $ref: '#/responses/NotFoundError'
         '503':
           $ref: '#/responses/AnotherServiceUnavailable'
+  /users/me/subscriptions:
+    post:
+      summary: Subscribe to a HTTP callback (webhook) as a user
+      description: '**Required ACL:** `webhookd.users.me.subscriptions.create`
+
+
+      For more information: http://documentation.wazo.community/en/stable/api_sdk/rest_api/webhookd/api.html'
+      operationId: user_create
+      parameters:
+        - $ref: '#/parameters/UserSubscriptionBody'
+      tags:
+        - subscriptions
+        - users
+      responses:
+        '201':
+          'description': The subscription has been completed
+        '400':
+          $ref: '#/responses/InvalidRequest'
+        '503':
+          $ref: '#/responses/AnotherServiceUnavailable'
 definitions:
   SubscriptionRequest:
     type: object
@@ -103,6 +123,26 @@ definitions:
       events_user_uuid:
         type: string
         description: "Only trigger webhook when an event occurs related to this user. Not compatible with all events. For more details, see: http://documentation.wazo.community/en/latest/api_sdk/rest_api/webhookd/api.html."
+    required:
+      - name
+      - service
+      - config
+      - events
+  UserSubscriptionRequest:
+    type: object
+    properties:
+      name:
+        type: string
+      service:
+        type: string
+        description: >
+          Known services: http. The service may be arbitrary, but it must be bound to an installed plugin in order to be effective.
+      config:
+        $ref: '#/definitions/HTTPServiceConfig'
+      events:
+        type: array
+        items:
+          type: string
     required:
       - name
       - service
